src/components/Layouts/ReportLayout.less
@import (reference) "../../css/variables";

* {
  font-family: @font-family-base;
}

body {
  background-color: @main-background-color;
  color: @font-color-base;
  font-family: @font-family-base !important;
}

strong {
  font-family: @font-family-source-sans-pro-semi-bold;
}

h1 {
  font-family: @font-family-base !important;
}

.report-layout {
  margin: @content-margin-top @content-margin-right @content-margin-bottom @content-margin-left;
  .report-row {
    display: table;
    width: 100%;
    table-layout: fixed;
    border-spacing: 10px;
  }
  .report-section {
    display: table-cell;
  }
  @media screen and (max-width: 630px) {
    .report-row {
      display: block !important;
    }
    .report-section {
      width: 100%;
      display: inline-block !important;
    }

  .grid-layout {
    position: relative;
    .react-grid-layout {
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
      transition: none;
      height: 100% !important;
      overflow-x: hidden;
      overflow-y: auto;
    }
    .react-grid-item {
      transition: none;
      color: @font-color-base !important;
      z-index: 1;
      &.active {
        z-index: 2 !important;
      }
    }
    .report-row {
      report-row: block;
    }

    .report-section {
      display: block;
    }
    }
  }
}

